notify space app build is done (#128)
* notify space app build is done

* minor update
