# space-app/controller/app.go
@@ -20,6 +20,7 @@ func AddRouteForSpaceAppInternalController(
 
 	r.POST(`/v1/space-app`, m.Write, ctl.Create)
 	r.PUT(`/v1/space-app/build/started`, m.Write, ctl.NotifyBuildIsStarted)
+	r.PUT(`/v1/space-app/build/done`, m.Write, ctl.NotifyBuildIsDone)
 	r.PUT(`/v1/space-app/service/started`, m.Write, ctl.NotifyServiceIsStarted)
 }
 
@@ -82,6 +83,37 @@ func (ctl *SpaceAppInternalController) NotifyBuildIsStarted(ctx *gin.Context) {
 	}
 
 	if err := ctl.appService.NotifyBuildIsStarted(&cmd); err != nil {
+		commonctl.SendError(ctx, err)
+	} else {
+		commonctl.SendRespOfPut(ctx, nil)
+	}
+}
+
+// @Summary  NotifyBuildIsDone
+// @Description  notidy space app build is done
+// @Tags     SpaceApp
+// @Param    body  body  reqToSetBuildIsDone  true  "body"
+// @Accept   json
+// @Success  202   {object}  commonctl.ResponseData
+// @Security Bearer
+// @Router   /v1/space-app/build/done [put]
+func (ctl *SpaceAppInternalController) NotifyBuildIsDone(ctx *gin.Context) {
+	req := reqToSetBuildIsDone{}
+
+	if err := ctx.BindJSON(&req); err != nil {
+		commonctl.SendBadRequestBody(ctx, err)
+
+		return
+	}
+
+	cmd, err := req.toCmd()
+	if err != nil {
+		commonctl.SendBadRequestParam(ctx, err)
+
+		return
+	}
+
+	if err := ctl.appService.NotifyBuildIsDone(&cmd); err != nil {
 		commonctl.SendError(ctx, err)
 	} else {
 		commonctl.SendRespOfPut(ctx, nil)
